@@ -1,8 +1,9 @@
 package com.app.hotell.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -10,23 +11,22 @@ import org.springframework.stereotype.Service;
 
 import com.app.hotell.Entity.User;
 import com.app.hotell.Repository.UserRepository;
- 
-@Service 
-public class UserDetailsServiceImpl implements UserDetailsService { 
- 
-    @Autowired 
-    private UserRepository userRepository; 
- 
-    @Override 
-    public UserDetails loadUserByUsername(String username) throws 
-UsernameNotFoundException { 
+
+@Service
+public class UserDetailsServiceImpl implements UserDetailsService {
+
+    @Autowired
+    private UserRepository userRepository;
+
+    @Override
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         User user = userRepository.findByUsername(username)
             .orElseThrow(() -> new UsernameNotFoundException("User not found"));
- 
-        return new org.springframework.security.core.userdetails.User( 
-                user.getUsername(), 
-                user.getPassword(), 
-                Collections.emptyList() 
-        ); 
-    } 
+
+        return new org.springframework.security.core.userdetails.User(
+                user.getUsername(),
+                user.getPassword(),
+                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().toUpperCase()))
+        );
+    }
 }
